force-app/main/default/objects/sector_cordinator__mdt/sector_cordinator__mdt.object-meta.xml
<CustomObject>
    <label>sector cordinator</label>
    <pluralLabel>sector cordinators</pluralLabel>
</CustomObject>