force-app/main/default/objects/sector_cordinator__mdt/fields/NSL__c.field-meta.xml
<CustomField>
    <fullName>NSL__c</fullName>
    <inlineHelpText>Please Populate the Federation Identifier of NSL from User record.</inlineHelpText>
    <label>NSL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>