force-app/main/default/objects/sector_cordinator__mdt/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <inlineHelpText>Please Populate the Federation Identifier of Owner from User record.</inlineHelpText>
    <label>OwnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>