force-app/main/default/objects/sector_cordinator__mdt/fields/sector_cordinator_id__c.field-meta.xml
<CustomField>
    <fullName>sector_cordinator_id__c</fullName>
    <inlineHelpText>Please Populate the Federation Identifier of Sector Business Partner from User record.</inlineHelpText>
    <label>sector cordinator id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>