force-app/main/default/objects/sector_cordinator__mdt/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Dependent solution on sector for custom lwc</description>
    <label>Solution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>