force-app/main/default/objects/sector_cordinator__mdt/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <label>Sub Sector</label>
    <type>TextArea</type>
</CustomField>